Update 'About' copyright date.

--- a/src/vmm-about.glade
+++ b/src/vmm-about.glade
@@ -7,7 +7,7 @@
     <property name="destroy_with_parent">True</property>
     <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
     <property name="program_name">Virtual Machine Manager</property>
-    <property name="copyright" translatable="yes">Copyright (C) 2006 Red Hat Inc.</property>
+    <property name="copyright" translatable="yes">Copyright (C) 2006-2009 Red Hat Inc.</property>
     <property name="comments" translatable="yes">Powered by libvirt</property>
     <property name="website">http://virt-manager.et.redhat.com/</property>
     <property name="website_label">http://virt-manager.et.redhat.com/</property>
