--- a/src/vmm-add-hardware.glade
+++ b/src/vmm-add-hardware.glade
@@ -5,6 +5,7 @@
   <widget class="GtkWindow" id="vmm-add-hardware">
     <property name="visible">True</property>
     <property name="title" translatable="yes">Add new virtual hardware</property>
+    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
     <signal name="delete_event" handler="on_vmm_create_delete_event"/>
     <child>
       <widget class="GtkVBox" id="vbox23">
