--- a/src/vmm-choose-cd.glade
+++ b/src/vmm-choose-cd.glade
@@ -12,6 +12,7 @@
     <property name="type_hint">dialog</property>
     <property name="gravity">center</property>
     <property name="has_separator">False</property>
+    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
     <signal name="delete_event" handler="on_vmm_choose_cd_delete_event"/>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox1">
