--- a/src/vmm-create-net.glade
+++ b/src/vmm-create-net.glade
@@ -5,6 +5,7 @@
   <widget class="GtkWindow" id="vmm-create-net">
     <property name="visible">True</property>
     <property name="title" translatable="yes">Create a new virtual network</property>
+    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
     <signal name="delete_event" handler="on_vmm_create_delete_event"/>
     <child>
       <widget class="GtkVBox" id="vbox23">
