--- a/src/vmm-create-pool.glade
+++ b/src/vmm-create-pool.glade
@@ -7,6 +7,7 @@
     <property name="title" translatable="yes">Add a New Storage Pool</property>
     <property name="default_width">525</property>
     <property name="default_height">350</property>
+    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
     <signal name="delete_event" handler="on_vmm_create_pool_delete_event"/>
     <child>
       <widget class="GtkVBox" id="vbox1">
