--- a/src/vmm-preferences.glade
+++ b/src/vmm-preferences.glade
@@ -4,6 +4,7 @@
 <glade-interface>
   <widget class="GtkWindow" id="vmm-preferences">
     <property name="title" translatable="yes">Preferences</property>
+    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
     <signal name="delete_event" handler="on_vmm_preferences_delete_event"/>
     <child>
       <widget class="GtkVBox" id="vbox1">
