--- a/src/vmm-delete.glade
+++ b/src/vmm-delete.glade
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Fri Apr  3 15:34:40 2009 -->
+<!--Generated with glade3 3.4.5 on Sun Jul 26 15:46:53 2009 -->
 <glade-interface>
   <widget class="GtkDialog" id="vmm-delete">
     <property name="width_request">500</property>
     <property name="height_request">300</property>
-    <property name="border_width">5</property>
+    <property name="border_width">6</property>
     <property name="title" translatable="yes">Delete Confirmation</property>
     <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
     <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
@@ -18,12 +18,11 @@
         <child>
           <widget class="GtkVBox" id="vbox1">
             <property name="visible">True</property>
-            <property name="border_width">6</property>
-            <property name="spacing">6</property>
             <child>
-              <widget class="GtkVBox" id="vbox3">
+              <widget class="GtkAlignment" id="alignment1">
                 <property name="visible">True</property>
-                <property name="spacing">3</property>
+                <property name="left_padding">6</property>
+                <property name="right_padding">6</property>
                 <child>
                   <widget class="GtkVBox" id="vbox2">
                     <property name="visible">True</property>
@@ -33,11 +32,11 @@
                         <property name="visible">True</property>
                         <property name="spacing">3</property>
                         <child>
-                          <widget class="GtkImage" id="image1">
+                          <widget class="GtkHBox" id="icon-box">
                             <property name="visible">True</property>
-                            <property name="xalign">0.059999998658895493</property>
-                            <property name="yalign">0</property>
-                            <property name="stock">gtk-delete</property>
+                            <child>
+                              <placeholder/>
+                            </child>
                           </widget>
                           <packing>
                             <property name="expand">False</property>
@@ -47,7 +46,6 @@
                           <widget class="GtkLabel" id="delete-main-label">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="yalign">0</property>
                             <property name="label">&lt;span size='x-large'&gt;Delete 'foo'&lt;/span&gt;</property>
                             <property name="use_markup">True</property>
                           </widget>
@@ -77,9 +75,6 @@
                       </packing>
                     </child>
                   </widget>
-                  <packing>
-                    <property name="expand">False</property>
-                  </packing>
                 </child>
               </widget>
               <packing>
@@ -90,6 +85,7 @@
               <widget class="GtkScrolledWindow" id="scrolledwindow1">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="border_width">6</property>
                 <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
                 <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
                 <property name="shadow_type">GTK_SHADOW_ETCHED_IN</property>
@@ -97,7 +93,6 @@
                   <widget class="GtkTreeView" id="delete-storage-list">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="headers_clickable">True</property>
                   </widget>
                 </child>
               </widget>
