Add 'Clone VM' wizard.

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -130,6 +130,14 @@
                       </widget>
                     </child>
                     <child>
+                      <widget class="GtkMenuItem" id="details-menu-clone">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">_Clone...</property>
+                        <property name="use_underline">True</property>
+                        <signal name="activate" handler="on_details_menu_clone_activate"/>
+                      </widget>
+                    </child>
+                    <child>
                       <widget class="GtkMenuItem" id="details-menu-migrate">
                         <property name="visible">True</property>
                         <property name="label" translatable="yes">_Migrate</property>
